<resources>
    <string name="app_name">Renotify</string>
    <string name="settings">Settings</string>
    <string name="notification_listener_service_name">@string/app_name</string>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="icon_default_text">Icon image</string>
    <string name="toast_provide_access">Please grant Notification Access for Renotify to work</string>
    <!-- Strings related to Settings -->

    <!--System notification settings-->
    <string name="pref_exclude_apps_title">Exclude apps from Renotify</string>
    <string name="pref_exclude_apps_description">You can choose which app notifications will not be suspended</string>
    <string name="pref_system_notification_settings_title">System notification settings</string>
    <string name="pref_system_notification_settings_summary">Change notification access for Renotify</string>

    <!--Snoozing notifications-->
    <string name="pref_snooze_title">Snooze</string>
    <string name="pref_snooze_description">When this feature is turned on, you can snooze notifications to a time or place</string>

    <!-- Blocking notifications -->
    <string name="pref_block_notifications_settings_title">Suspend notifications</string>
    <string name="pref_block_notifications_title">Do not disturb</string>
    <string name="pref_block_notifications_description">Suspend notifications while you are busy and see them later</string>
    <string name="pref_block_by_interruption_title">Do not disturb (DND)</string>
    <string name="pref_block_by_interruption_description">Suspend notifications based on DND filter</string>
    <string name="pref_interruption_filter_settings_title">Select DND filter</string>

    <string name="pref_work_hours_title">Work hours</string>
    <string name="pref_work_hours_description">Suspend notifications during your work hours</string>

    <string-array name="pref_interruption_filters_titles">
        <item>Priority</item>
        <item>Alarms</item>
        <item>Total Silence</item>
    </string-array>
    <string-array name="pref_interruption_filters_values">
        <item>2</item>
        <item>4</item>
        <item>3</item>
    </string-array>

    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="test_notif">Send a Test Notification</string>
    <string name="reminder_notif">Show Renotify status in notification bar</string>
    <string name="show_all">Show all</string>
    <string name="test_notification_title">Hey there!</string>
    <string name="test_notification_text">Verify everything is setup perfectly</string>
    <string name="reminder_notification_title">Renotify is Active</string>
    <string name="reminder_notification_text">Your notifications are being suspended</string>
    <string name="reminder_notification_text_with_count">%1$d notification suspended</string>
    <string name="reminder_notification_text_with_count_plural">%1$d notifications suspended</string>
</resources>
